Edits to in-person-cs, fixes to full-bleed image column

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11687,7 +11687,6 @@ html {
   right: 0;
   /* testing width: 50%; */
   width: 100%;
-  width: 50%;
   height: 100%;
   object-fit: cover;
   will-change: transform;
