--- a/assets/scss/_content-sections/_section-with-full-bleed-image-column.scss
+++ b/assets/scss/_content-sections/_section-with-full-bleed-image-column.scss
@@ -31,7 +31,7 @@
       right: 0;
       /* testing width: 50%; */
       width: 100%;
-      width: 50%;
+//      width: 50%;
 
       height: 100%;
       object-fit: cover;
